--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   "homepage": "https://github.com/viaflow/plugin-http#readme",
   "dependencies": {
     "request": "^2.87.0",
-    "request-promise-native": "^1.0.5"
-  },
-  "viaflow": {
-    "display": "HTTP"
+    "request-promise": "^4.2.2"
   }
 }
